[gd_scene load_steps=32 format=3 uid="uid://bd00qhbwn5hyd"]

[ext_resource type="Script" path="res://scripts/characters/enemies/bug_flying_shooter.gd" id="1_kf0hq"]
[ext_resource type="Texture2D" uid="uid://dq1og1rxrsm6b" path="res://assets/characters/enemies/bug_flying_shooter/diffuse/damaged.png" id="1_w7cbt"]
[ext_resource type="Texture2D" uid="uid://dpn730ghkipsp" path="res://assets/characters/enemies/bug_flying_shooter/canvas_texture/death_canvas_texture.tres" id="3_g470e"]
[ext_resource type="Texture2D" uid="uid://2ijwjwek0wot" path="res://assets/characters/enemies/bug_flying_shooter/canvas_texture/shoot_canvas_texture.tres" id="4_l6uor"]
[ext_resource type="PackedScene" uid="uid://cxb8foogagtu4" path="res://scenes/tools/hurt_box.tscn" id="4_phb5x"]
[ext_resource type="Texture2D" uid="uid://gsfs0vdjhu7o" path="res://assets/characters/enemies/bug_flying_shooter/canvas_texture/walk_canvas_texture.tres" id="5_11mh1"]
[ext_resource type="PackedScene" uid="uid://bq7xttj67lksf" path="res://scenes/tools/hit_box.tscn" id="5_wnptm"]
[ext_resource type="AudioStream" uid="uid://2jdbt2v3kslj" path="res://assets/characters/enemies/bug_damaged.wav" id="8_ypt1f"]
[ext_resource type="AudioStream" uid="uid://cqrdyiny05iwb" path="res://assets/characters/enemies/bug_death.wav" id="9_r1vnj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_evqfd"]
atlas = ExtResource("1_w7cbt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay1e0"]
atlas = ExtResource("1_w7cbt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc3f4"]
atlas = ExtResource("3_g470e")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6x6h"]
atlas = ExtResource("3_g470e")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_48k57"]
atlas = ExtResource("3_g470e")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m260v"]
atlas = ExtResource("3_g470e")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_avy76"]
atlas = ExtResource("4_l6uor")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdlq3"]
atlas = ExtResource("4_l6uor")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak3c0"]
atlas = ExtResource("4_l6uor")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pw0f"]
atlas = ExtResource("4_l6uor")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kisfx"]
atlas = ExtResource("4_l6uor")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6moc0"]
atlas = ExtResource("5_11mh1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5k71"]
atlas = ExtResource("5_11mh1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtbc7"]
atlas = ExtResource("5_11mh1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2peq"]
atlas = ExtResource("5_11mh1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptpey"]
atlas = ExtResource("5_11mh1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkqlh"]
atlas = ExtResource("5_11mh1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cdyh3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_evqfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay1e0")
}],
"loop": false,
"name": &"damaged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc3f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6x6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48k57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m260v")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_avy76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdlq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak3c0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pw0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kisfx")
}],
"loop": true,
"name": &"shoot",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6moc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5k71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtbc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2peq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptpey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkqlh")
}],
"loop": true,
"name": &"walk",
"speed": 40.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kr57d"]
radius = 131.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vmj1h"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yu6rr"]
radius = 13.0384

[sub_resource type="CircleShape2D" id="CircleShape2D_bi63i"]
radius = 9.0

[node name="bug_flying_shooter" type="CharacterBody2D"]
position = Vector2(2.78, 0)
collision_layer = 4
collision_mask = 9
script = ExtResource("1_kf0hq")

[node name="animated_sprite_bug_flying_shooter" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cdyh3")
animation = &"death"
autoplay = "walk"

[node name="detection_area" type="Area2D" parent="."]
position = Vector2(-3, 0)
collision_layer = 8
collision_mask = 2

[node name="detection_collision" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_kr57d")
debug_color = Color(0, 0.583333, 0.7, 0.470588)

[node name="detection_ray" type="RayCast2D" parent="."]
position = Vector2(-3, 0)
target_position = Vector2(76, 0)

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0)
shape = SubResource("CircleShape2D_vmj1h")
debug_color = Color(0, 0, 0, 0.470588)

[node name="hurt_box" parent="." instance=ExtResource("4_phb5x")]
collision_mask = 16

[node name="hurt_box_collision" type="CollisionShape2D" parent="hurt_box"]
position = Vector2(-3, 0)
shape = SubResource("CircleShape2D_yu6rr")
debug_color = Color(0, 0.65, 0.108333, 0.470588)

[node name="hit_box" parent="." instance=ExtResource("5_wnptm")]
collision_layer = 32

[node name="hit_box_collision" type="CollisionShape2D" parent="hit_box"]
position = Vector2(-3, 0)
shape = SubResource("CircleShape2D_bi63i")
debug_color = Color(0.65, 0, 0, 0.470588)

[node name="shoot_timer" type="Timer" parent="."]

[node name="audio" type="Node" parent="."]

[node name="audio_damaged" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("8_ypt1f")
volume_db = 10.0
bus = &"SFX"

[node name="audio_death" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("9_r1vnj")
bus = &"SFX"

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
